# CoTeX-CLI

./: .gitignore  pyproject.toml
cotex/: cli.py  config.py  indexer.py  models.py  orchestrator.py  tools.py
cotex_cli.egg-info/: PKG-INFO  SOURCES.txt  entry_points.txt  requires.txt  top_level.txt
